# LinkediNTU

./: .gitignore  README.md  Tracker.md  package-lock.json  package.json
apps/ai-api/: README.md  pyproject.toml
apps/ai-api/app/: main.py
apps/ai-api/training/: DataAugmentor.py  GroqLLM.py  README.md  generate_data.sh  prompts.txt  test.sh  use_trained_model.py
apps/ai-api/training/LLM_pipeline/: README.md  pdf_parser.py  resume_analyse.py
apps/ai-api/training/data/: custom_gen.json  software_eng_dataset.json
apps/ai-api/training/data/feedback/: phan_feedback.json  phan_resume_feedback.json
apps/ai-api/training/data/processed_resume/: phan_parsed_resume.json  phan_parsed_resume_gemini.json
apps/ai-api/training/finetuning/: finetune.py
apps/ai-api/training/section_classifier/: augment.py
apps/ai-api/utils/: README.md  ResumeParser.py
apps/ai-api/utils/data/: input_resume.json  test_1.json  testing.json  train_test.json
apps/ai-api/utils/data/processed_resume/: manh_parsed_resume_gemini.json  phan_parsed_resume_gemini.json
apps/ai-api/utils/parser/: ResumeParser.py  parsed_resume.json
apps/ai-api/utils/section_classifier/: augment.csv  run_training.sh  train.py
apps/backend/: .gitignore  README.md  pom.xml
apps/node-api/: README.md  (+1 more)
docs/: README.md
model_experiments/: LinkediNTU_experiments.ipynb  LinkediNTU_experiments_v1.ipynb  LinkediNTU_experiments_v2.ipynb  README.md  pyproject.toml
model_experiments/.ipynb_checkpoints/: LinkediNTU_experiments_v1-checkpoint.ipynb  LinkediNTU_experiments_v2-checkpoint.ipynb
scripts/: README.md
(+108 files in other folders)
